# image-classification-tensorflow

./: LICENSE  README.md
cls_model_zoo/: __init__.py  cnn_basenet.py  darknet53.py  densenet.py  inceptionv4.py  loss.py  mobilenetv2.py  repvgg.py  repvgg_bak.py  res2net.py  resnest.py  resnet.py  resnet_utils.py  se-resnet.py  verify_repvgg_conv.py  vgg.py  vgg16.py  xception.py
config/: __init__.py  ilsvrc_2012_darknet53.yaml  ilsvrc_2012_densenet.yaml  ilsvrc_2012_inceptionv4.yaml  ilsvrc_2012_mobilenetv2.yaml  ilsvrc_2012_mobilnetv2.yaml  ilsvrc_2012_repvgg.yaml  ilsvrc_2012_res2net.yaml  ilsvrc_2012_resnet.yaml  ilsvrc_2012_se-resnet.yaml  ilsvrc_2012_vgg.yaml  ilsvrc_2012_xception.yaml
data/ilsvrc_2012_dataset/image_file_index/: test.txt  train.txt  val.txt
data/ilsvrc_2012_dataset/tools/: make_sample_index_file.py
data_provider/: __init__.py  base_dataset_provider.py  base_dataset_reader.py  base_dataset_tf_provider.py  general_provider.py  general_tf_provider.py  ilsvrc_2012_provider.py  ilsvrc_2012_tf_provider.py
local_utils/: __init__.py
local_utils/augment_utils/: __init__.py  augmentation_tf_utils.py  augmentation_utils.py
local_utils/config_utils/: __init__.py  parse_config_utils.py
local_utils/log_util/: __init__.py  init_logger.py
scripts/: evaluate_model.sh
tboard/xception_ilsvrc_2012/: model_train_config.json
tools/: __init__.py  convert_model.py  evaluate_model.py  freeze_model.py  make_dataset_tfrecords.py  prepare_cls_task.py  train_model.py
trainner/: __init__.py  base_trainner.py  lr_scheduler.py
workflow_monitor/: CMakeLists.txt  wf_net_training_monitor.cpp
workflow_monitor/source/project/: project_monitor.cpp  project_monitor.h
workflow_monitor/source/server/: model_status_monitor_server.cpp  model_status_monitor_server.h
workflow_monitor/source/utils/: model_file_utils.h  monitor_utils.h  monitor_utils.inl  monitor_utils_test.cc  tf_utils.h  tf_utils_test.cc
